// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should adopt the "backgroundColor" property 1`] = `
.c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  background-color: unset;
  color: #bada55;
  font-size: 1.44rem;
  padding: 0.5rem 1rem;
}

.c0 > *:not(:last-child) {
  margin-right: 1rem;
  padding-right: 1rem;
  border-right: 1px solid #bada55;
}

@media (min-width:480px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 4rem;
    background-color: transparent;
    background-image: linear-gradient( 45deg,transparent 15%,inherit 15% );
    background-position-x: 0.5rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 8rem;
  }
}

<div
  className="c0"
/>
`;

exports[`<Container /> should adopt the "color" property 1`] = `
.c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  background-color: #bada55;
  color: unset;
  font-size: 1.44rem;
  padding: 0.5rem 1rem;
}

.c0 > *:not(:last-child) {
  margin-right: 1rem;
  padding-right: 1rem;
  border-right: 1px solid inherit;
}

@media (min-width:480px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 4rem;
    background-color: transparent;
    background-image: linear-gradient( 45deg,transparent 15%,#bada55 15% );
    background-position-x: 0.5rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 8rem;
  }
}

<div
  className="c0"
  color="#bada55"
/>
`;

exports[`<Container /> should render and match the snapshot 1`] = `
.c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  background-color: unset;
  color: unset;
  font-size: 1.44rem;
  padding: 0.5rem 1rem;
}

.c0 > *:not(:last-child) {
  margin-right: 1rem;
  padding-right: 1rem;
  border-right: 1px solid inherit;
}

@media (min-width:480px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 4rem;
    background-color: transparent;
    background-image: linear-gradient( 45deg,transparent 15%,inherit 15% );
    background-position-x: 0.5rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 0.5rem 1rem 0.5rem 8rem;
  }
}

<div
  className="c0"
/>
`;
